@@ -99,6 +99,7 @@ double gsl_stats_float_median_from_sorted_data (const float sorted_data[], const
 double gsl_stats_float_median (float sorted_data[], const size_t stride, const size_t n);
 double gsl_stats_float_quantile_from_sorted_data (const float sorted_data[], const size_t stride, const size_t n, const double f) ;
 
+double gsl_stats_float_trmean_from_sorted_data (const double trim, const float sorted_data[], const size_t stride, const size_t n) ;
 double gsl_stats_float_gastwirth_from_sorted_data (const float sorted_data[], const size_t stride, const size_t n) ;
 
 double gsl_stats_float_mad0(const float data[], const size_t stride, const size_t n, double work[]);
