@@ -263,6 +263,22 @@ FUNCTION (test, func) (const size_t stridea, const size_t strideb)
   }
 
   {
+    const double trim = 0.3;
+    double trmean = FUNCTION(gsl_stats,trmean_from_sorted_data)(trim, sorted, stridea, ina) ;
+    double expected = 17.875;
+    gsl_test_rel  (trmean, expected, rel,
+                   NAME(gsl_stats) "_trmean_from_sorted_data (even)");
+  }
+
+  {
+    const double trim = 0.3;
+    double trmean = FUNCTION(gsl_stats,trmean_from_sorted_data)(trim, sorted, stridea, ina - 1) ;
+    double expected = 17.66666666666666;
+    gsl_test_rel  (trmean, expected, rel,
+                   NAME(gsl_stats) "_trmean_from_sorted_data (odd)");
+  }
+
+  {
     double gastwirth = FUNCTION(gsl_stats,gastwirth_from_sorted_data)(sorted, stridea, ina) ;
     double expected = 17.9;
     gsl_test_rel  (gastwirth, expected, rel,
